--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,8 @@
     <string name="delete">Delete</string>
     <string name="error_occurred_during_api_call">Error Occurred during api call</string>
     <string name="are_you_sure_you_want_to_delete_this_beneficiary_details">Are you sure you want to delete this beneficiary details?</string>
+    <string name="are_you_sure_you_want_to_exit_app">Are you sure you want to exit App?</string>
+    <string name="exit">Exit</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
