--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="please_check_internet_connection">Please check internet connection</string>
+    <string name="plese_enter_valid_credentials">Please enter valid credentials</string>
 </resources>
