After submit name change

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="no">No</string>
     <string name="please_check_internet_connection">Please check internet connection</string>
     <string name="plese_enter_valid_credentials">Please enter valid credentials</string>
+    <string name="submit">Submit</string>
 </resources>
